# distributed-gpt2

./: README.md  load.py  notebook.ipynb  pyproject.toml  train.py
