[project]
name = "distributed-gpt2"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.47.0",
]
